small prediction tests

--- a/ml_models/ml_model_testing.ipynb
+++ b/ml_models/ml_model_testing.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "con = pymysql.connect('localhost', 'root', \n",
+    "con = pymysql.connect(ip, 'admin', \n",
     "    'password', 'secret_summer_project_data')\n",
     "    "
    ]
