--- a/ml_models/routes_table_alterations.ipynb
+++ b/ml_models/routes_table_alterations.ipynb
@@ -2,12 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import pymysql"
+    "import pymysql\n",
+    "import pickle\n",
+    "import json\n",
+    "import os"
    ]
   },
   {
@@ -16,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "con = pymysql.connect('localhost', 'root', \n",
+    "con = pymysql.connect(ip, 'admin', \n",
     "    'password', 'secret_summer_project_data')"
    ]
   },
@@ -3941,6 +3944,150 @@
    ],
    "source": [
     "prediction / 100 * percent_of_route"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "request = {\n",
+    "'arr_lat': '53.3393952',\n",
+    "'arr_lng': '-6.2726863',\n",
+    "'day': \"Sun\",\n",
+    "'dep_lat': '53.32396190000001',\n",
+    "'dep_lng': '-6.335188199999999',\n",
+    "'google_pred': '959',\n",
+    "'line': \"151\",\n",
+    "'time': '36000'\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prediction(request):\n",
+    "    # get lat & lng values for departure and arrival bus stops and the line chosen by google maps\n",
+    "    line,dep_lat,dep_lng,arr_lat,arr_lng,google_pred,time,day = request['line'],request['dep_lat'],request['dep_lng'],request['arr_lat'],request['arr_lng'],request['google_pred'],request['time'],request['day']\n",
+    "\n",
+    "    ''' Because of the inconsistencies which result from using different data sources I am using latitudes and logituteds to match google maps chosen\n",
+    "    bus stops with bus stops in our data. The lats and longs wont be exactly the same so I am narrowing them down to 3 decimal places.\n",
+    "    after doing some research I decoverved that the third decimal place in a latitude or longitude signifies a difference of about 100 metres\n",
+    "    this means that by narrowing it down to three decimal places we will be using a bus stop that is in a 100 metre squared area of the stop goolge maps picked.\n",
+    "    This could be improved but I think it provides a good approximation for the time of the journey '''\n",
+    "\n",
+    "    # narrowing google lat and longs as specified above\n",
+    "    dep_lat = dep_lat[0:6]\n",
+    "    dep_lng = dep_lng[0:6]\n",
+    "    arr_lat = arr_lat[0:6]\n",
+    "    arr_lng = arr_lng[0:6]\n",
+    "\n",
+    "    # create dataframe out of csv with all the bus routes in our data\n",
+    "    df = pd.read_csv('routes_clean.csv')\n",
+    "\n",
+    "    # format the dataframe as necessary to compare the latitude and longitudes in our data with google maps data \n",
+    "    df['longitude'] = df['longitude'].astype('str')\n",
+    "    df['latitude'] = df['latitude'].astype('str')\n",
+    "    df['longitude'] = df['longitude'].astype('str').str[0:6]\n",
+    "    df['latitude'] = df['latitude'].astype('str').str[0:6]\n",
+    "\n",
+    "    # create a new df with only the routes containing the arrival or departure stops chosen by google maps\n",
+    "    true_df = df[(df['LINEID'] == line) & (((df['latitude'] == dep_lat) & (df['longitude'] == dep_lng)) | ((df['latitude'] == arr_lat) & (df['longitude'] == arr_lng)))]\n",
+    "\n",
+    "    # search this new df of potential routes for one where BOTH departure and arrival bus stops are present and pick the first route where this is true\n",
+    "    potential_routes = []\n",
+    "    for key,value in true_df['ROUTEID'].value_counts().items():\n",
+    "        if value > 1:\n",
+    "            potential_routes.append(key)\n",
+    "\n",
+    "    correct_route = 'N/A'\n",
+    "    for route in potential_routes:\n",
+    "        if len([(true_df['ROUTEID'] == potential_routes[0]) & ((true_df['latitude'] == dep_lat) & (true_df['longitude'] == dep_lng))]) > 0 and \\\n",
+    "            len(true_df[(true_df['ROUTEID'] == potential_routes[0]) & ((true_df['latitude'] == arr_lat) & (true_df['longitude'] == arr_lng))]) > 0:\n",
+    "            correct_route = route\n",
+    "            break\n",
+    "    ''' honestly this way of chosing the route could be improved.\n",
+    "    it is picking any route with the start and end destination chosen by google maps without taking into account the number of stops between them\n",
+    "    this is because I am prioritising having our app make a prediction instead of using google prediction but maybe in the future we could add in some threshold\n",
+    "    i.e if google maps says there are 8 stops between departure and arrival the route we chose must havd 8 +/- 2 stops between them '''\n",
+    "\n",
+    "    if correct_route != 'N/A':\n",
+    "        # if an appropriate model was found, load that model \n",
+    "        with open('grad_boost_models/'+str(correct_route) +'_grad_boost_model.sav', 'rb') as f:\n",
+    "            model = pickle.load(f)\n",
+    "\n",
+    "            # get the percent of the route the journey will take\n",
+    "            total_stops_on_route = df[df['ROUTEID']==correct_route]['PROGRNUMBER'].max()\n",
+    "            dep_stop_on_route = df[(df['ROUTEID']==correct_route) & (df['latitude'] == dep_lat) & (df['longitude'] == dep_lng)]['PROGRNUMBER'].min()\n",
+    "            arr_stop_on_route = df[(df['ROUTEID']==correct_route) & (df['latitude'] == arr_lat) & (df['longitude'] == arr_lng)]['PROGRNUMBER'].max()\n",
+    "            num_stops = arr_stop_on_route - dep_stop_on_route\n",
+    "            percent_of_route = num_stops / total_stops_on_route * 100\n",
+    "\n",
+    "            # make a prediction for how long the total bus route will take\n",
+    "            dummy_val_dict = {'ACTUALTIME_DEP':time,'temp':10,'wind_speed': 7,'Clouds':0,'Drizzle':0,'Fog':0,'Mist':0,'Rain': 0,'Smoke':0,'Snow':0,'Mon':0,'Sat':0,'Sun':0,'Thu':0,'Tue':0,'Wed':0}\n",
+    "            print(dummy_val_dict)\n",
+    "            print(day)\n",
+    "            dummy_values = [[]]\n",
+    "            dummy_val_dict['Clouds'] = 1\n",
+    "            # fridays have been dropped and are inferred from absence of other days\n",
+    "            if day != 'Fri':\n",
+    "                dummy_val_dict[day] = 1\n",
+    "            # add values for prediction to an array\n",
+    "            for key,value in dummy_val_dict.items():\n",
+    "                dummy_values[0].append(value)\n",
+    "            # make prediction\n",
+    "            prediction = model.predict(dummy_values)[0]\n",
+    "\n",
+    "            # get a percentage of that prediction based on how much of the route will be travelled\n",
+    "            time_prediction = prediction / 100 * percent_of_route\n",
+    "    else:\n",
+    "        # if no appropriate model found use google time prediction\n",
+    "        time_prediction = google_pred\n",
+    "\n",
+    "    # test_data = true_df.to_json()\n",
+    "    return  time_prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ACTUALTIME_DEP': '36000', 'temp': 10, 'wind_speed': 7, 'Clouds': 0, 'Drizzle': 0, 'Fog': 0, 'Mist': 0, 'Rain': 0, 'Smoke': 0, 'Snow': 0, 'Mon': 0, 'Sat': 0, 'Sun': 0, 'Thu': 0, 'Tue': 0, 'Wed': 0}\n",
+      "Sun\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = prediction(request)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "933.9242316001912"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test"
    ]
   },
   {
