--- a/ml_models/ml_model_accuracy_check.ipynb
+++ b/ml_models/ml_model_accuracy_check.ipynb
@@ -639,7 +639,7 @@
    "source": [
     ",# create connection to db\n",
     "\n",
-    "con = pymysql.connect('localhost', 'root', \n",
+    "con = pymysql.connect(ip, 'admin', \n",
     "    'password', 'secret_summer_project_data')"
    ]
   },
